--- a/scilab/modules/xpad/Makefile.in
+++ b/scilab/modules/xpad/Makefile.in
@@ -112,7 +112,7 @@ libscixpad_la_DEPENDENCIES =  \
 am__objects_2 =
 am__objects_3 = libscixpad_la-gw_xpad.lo
 am__objects_4 = libscixpad_la-sci_xpad.lo
-am__objects_5 = libscixpad_la-Xpad.lo
+am__objects_5 = libscixpad_la-Xpad.lo libscixpad_la-callxpad.lo
 am_libscixpad_la_OBJECTS = $(am__objects_2) $(am__objects_3) \
 	$(am__objects_4) $(am__objects_5)
 libscixpad_la_OBJECTS = $(am_libscixpad_la_OBJECTS)
@@ -452,7 +452,7 @@ HELP_CHAPTERDIR = help/
 HELP_CHAPTERFILE = addchapter.sce
 HELP_CHAPTERLANG = en_US fr_FR pt_BR
 XPAD_C_SOURCES = 
-XPAD_CPP_SOURCES = src/jni/Xpad.cpp
+XPAD_CPP_SOURCES = src/jni/Xpad.cpp src/cpp/callxpad.cpp
 GIWS_WRAPPERS = Xpad.giws.xml
 @GIWS_TRUE@BUILT_SOURCES = giws
 GATEWAY_C_SOURCES = sci_gateway/c/gw_xpad.c
@@ -502,7 +502,7 @@ libscixpad_la_sci_gateway_DATA = sci_gateway/xpad_gateway.xml
 libscixpad_la_includedir = $(pkgincludedir)/xpad
 libscixpad_la_include_HEADERS = includes/gw_xpad.h \
 includes/dynlib_xpad.h \
-src/jni/Xpad.hxx
+includes/callxpad.h
 
 @GUI_TRUE@USEANT = 1
 all: $(BUILT_SOURCES)
@@ -579,6 +579,7 @@ distclean-compile:
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscixpad_disable_la-noxpad.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscixpad_la-Xpad.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscixpad_la-callxpad.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscixpad_la-gw_xpad.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscixpad_la-sci_xpad.Plo@am__quote@
 
@@ -651,6 +652,13 @@ libscixpad_la-Xpad.lo: src/jni/Xpad.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/jni/Xpad.cpp' object='libscixpad_la-Xpad.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscixpad_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libscixpad_la-Xpad.lo `test -f 'src/jni/Xpad.cpp' || echo '$(srcdir)/'`src/jni/Xpad.cpp
+
+libscixpad_la-callxpad.lo: src/cpp/callxpad.cpp
+@am__fastdepCXX_TRUE@	$(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscixpad_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libscixpad_la-callxpad.lo -MD -MP -MF $(DEPDIR)/libscixpad_la-callxpad.Tpo -c -o libscixpad_la-callxpad.lo `test -f 'src/cpp/callxpad.cpp' || echo '$(srcdir)/'`src/cpp/callxpad.cpp
+@am__fastdepCXX_TRUE@	mv -f $(DEPDIR)/libscixpad_la-callxpad.Tpo $(DEPDIR)/libscixpad_la-callxpad.Plo
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/cpp/callxpad.cpp' object='libscixpad_la-callxpad.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscixpad_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libscixpad_la-callxpad.lo `test -f 'src/cpp/callxpad.cpp' || echo '$(srcdir)/'`src/cpp/callxpad.cpp
 
 mostlyclean-libtool:
 	-rm -f *.lo
