--- a/scilab/modules/call_scilab/Makefile.am
+++ b/scilab/modules/call_scilab/Makefile.am
@@ -19,6 +19,7 @@ libscicall_scilab_la_CFLAGS=  	-I$(srcdir)/includes/ \
 			-I$(top_srcdir)/libs/doublylinkedlist/includes \
 			-I$(top_srcdir)/modules/output_stream/includes \
 			-I$(top_srcdir)/modules/action_binding/includes \
+			-I$(top_srcdir)/modules/api_scilab/includes \
 			-I$(top_srcdir)/modules/fileio/includes \
 			-I$(top_srcdir)/modules/graphics/includes \
 			-I$(top_srcdir)/modules/core/src/c/
