Revert "Update of messages"
This reverts commit 776bae120fc6fcbcb764c27f3796f2003da35cfb.

--- a/scilab/modules/jvm/etc/jvm_options.xml.in
+++ b/scilab/modules/jvm/etc/jvm_options.xml.in
@@ -33,7 +33,10 @@ $SCILAB : scilab path (SCI in Scilab)
 -->
 
 <!-- enable-debug-java enables some more checks
-@JAVA_DEBUG_OPTIONS@
+<option value='-verbose:jni'/>
+	   <option value='-Xcheck:jni'/>
 -->
+@JAVA_DEBUG_OPTIONS@
+
 <!-- comments -->
 </jvm_options>
