--- a/scilab/modules/cacsd/Makefile.am
+++ b/scilab/modules/cacsd/Makefile.am
@@ -108,7 +108,8 @@ src/slicot/inva.f \
 src/slicot/polmc.f \
 src/slicot/ssxmc.f \
 src/slicot/ZB03OD.f \
-src/slicot/riccpack.f
+src/slicot/riccpack.f \
+src/slicot/Ex-schur.f
 
 CACSD_FORTRAN_SOURCES = \
 src/fortran/jacl2.f \
