--- a/scilab/modules/elementary_functions/Makefile.am
+++ b/scilab/modules/elementary_functions/Makefile.am
@@ -404,6 +404,7 @@ libscielementary_functions_la_CPPFLAGS = 	-I$(srcdir)/includes/ \
 	-I$(top_builddir)/modules/functions_manager/includes \
 	-I$(top_builddir)/modules/types/includes \
 	-I$(top_builddir)/modules/operations/includes \
+	-I$(top_builddir)/modules/abstractSyntaxTree/includes \
 	-I$(top_builddir)/modules/symbol/includes
 
 
