--- a/scilab/modules/elementary_functions/Makefile.in
+++ b/scilab/modules/elementary_functions/Makefile.in
@@ -1159,6 +1159,7 @@ libscielementary_functions_la_CPPFLAGS = -I$(srcdir)/includes/ \
 	-I$(top_builddir)/modules/functions_manager/includes \
 	-I$(top_builddir)/modules/types/includes \
 	-I$(top_builddir)/modules/operations/includes \
+	-I$(top_builddir)/modules/abstractSyntaxTree/includes \
 	-I$(top_builddir)/modules/symbol/includes
 
 
