--- a/scilab/modules/operations/Makefile.in
+++ b/scilab/modules/operations/Makefile.in
@@ -392,6 +392,8 @@ libscioperations_la_CFLAGS = -I$(top_srcdir)/modules/operations/includes \
 
 libscioperations_la_CXXFLAGS = -I$(top_srcdir)/modules/operations/includes \
 						-I$(top_srcdir)/modules/types/includes \
+						-I$(top_srcdir)/modules/symbol/includes \
+						-I$(top_srcdir)/modules/abstractSyntaxTree/includes \
 						-I$(top_srcdir)/modules/core/includes
 
 libscioperations_la_SOURCES = $(OPERATIONS_C_SOURCES) $(OPERATIONS_CPP_SOURCES)
