--- a/scilab/modules/functions_manager/Makefile.in
+++ b/scilab/modules/functions_manager/Makefile.in
@@ -358,6 +358,7 @@ libscifunctions_manager_la_CXXFLAGS = -I$(top_builddir)/modules/types/includes/ 
 						-I$(top_builddir)/modules/elementary_functions/includes/ \
 						-I$(top_builddir)/modules/operations/includes/ \
 						-I$(top_builddir)/modules/system_env/includes/ \
+						-I$(top_builddir)/modules/abstractSyntaxTree/includes/ \
 						-Iincludes/ \
 						-Isrc/cpp \
 						$(XML_FLAGS)
