--- a/scilab/modules/api_scilab/api_scilab.vcproj
+++ b/scilab/modules/api_scilab/api_scilab.vcproj
@@ -373,43 +373,43 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\src\c\api_boolean.cpp"
+				RelativePath=".\src\cpp\api_boolean.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\src\c\api_boolean_sparse.cpp"
+				RelativePath=".\src\cpp\api_boolean_sparse.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\src\c\api_common.cpp"
+				RelativePath=".\src\cpp\api_common.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\src\c\api_double.cpp"
+				RelativePath=".\src\cpp\api_double.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\src\c\api_int.cpp"
+				RelativePath=".\src\cpp\api_int.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\src\c\api_list.cpp"
+				RelativePath=".\src\cpp\api_list.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\src\c\api_pointer.cpp"
+				RelativePath=".\src\cpp\api_pointer.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\src\c\api_poly.cpp"
+				RelativePath=".\src\cpp\api_poly.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\src\c\api_sparse.cpp"
+				RelativePath=".\src\cpp\api_sparse.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\src\c\api_string.cpp"
+				RelativePath=".\src\cpp\api_string.cpp"
 				>
 			</File>
 			<File
@@ -443,39 +443,39 @@
 				>
 			</File>
 			<File
-				RelativePath=".\src\c\api_internal_boolean.h"
+				RelativePath=".\src\cpp\api_internal_boolean.h"
 				>
 			</File>
 			<File
-				RelativePath=".\src\c\api_internal_boolean_sparse.h"
+				RelativePath=".\src\cpp\api_internal_boolean_sparse.h"
 				>
 			</File>
 			<File
-				RelativePath=".\src\c\api_internal_common.h"
+				RelativePath=".\src\cpp\api_internal_common.h"
 				>
 			</File>
 			<File
-				RelativePath=".\src\c\api_internal_double.h"
+				RelativePath=".\src\cpp\api_internal_double.h"
 				>
 			</File>
 			<File
-				RelativePath=".\src\c\api_internal_int.h"
+				RelativePath=".\src\cpp\api_internal_int.h"
 				>
 			</File>
 			<File
-				RelativePath=".\src\c\api_internal_pointer.h"
+				RelativePath=".\src\cpp\api_internal_pointer.h"
 				>
 			</File>
 			<File
-				RelativePath=".\src\c\api_internal_poly.h"
+				RelativePath=".\src\cpp\api_internal_poly.h"
 				>
 			</File>
 			<File
-				RelativePath=".\src\c\api_internal_sparse.h"
+				RelativePath=".\src\cpp\api_internal_sparse.h"
 				>
 			</File>
 			<File
-				RelativePath=".\src\c\api_internal_string.h"
+				RelativePath=".\src\cpp\api_internal_string.h"
 				>
 			</File>
 			<File
