--- a/scilab/modules/integer/Makefile.in
+++ b/scilab/modules/integer/Makefile.in
@@ -505,6 +505,7 @@ sci_gateway/fortran/sci_i_min.f \
 sci_gateway/fortran/sci_inttype.f
 
 libsciinteger_la_CFLAGS = -I$(srcdir)/includes/ \
+				-I$(top_srcdir)/modules/api_scilab/includes \
 				-I$(top_srcdir)/modules/output_stream/includes/
 
 pkglib_LTLIBRARIES = libsciinteger.la
