--- a/scilab/modules/sound/Makefile.in
+++ b/scilab/modules/sound/Makefile.in
@@ -354,6 +354,7 @@ libscisound_la_CFLAGS = -I$(srcdir)/includes/ \
 			-I$(srcdir)/src/c/ \
 			-I$(top_srcdir)/libs/MALLOC/includes/ \
 			-I$(top_srcdir)/modules/output_stream/includes \
+			-I$(top_srcdir)/modules/api_scilab/includes \
 			-I$(top_srcdir)/modules/fileio/includes
 
 pkglib_LTLIBRARIES = libscisound.la
