--- a/scilab/modules/symbolic/Makefile.in
+++ b/scilab/modules/symbolic/Makefile.in
@@ -374,6 +374,7 @@ sci_gateway/fortran/sci_ldivf.f \
 sci_gateway/fortran/sci_rdivf.f
 
 libscisymbolic_la_CFLAGS = -I$(srcdir)/includes/ \
+				-I$(top_srcdir)/modules/api_scilab/includes \
 				-I$(top_srcdir)/modules/output_stream/includes
 
 #-Isrc/c/
