--- a/scilab/modules/io/src/c/io.vcproj
+++ b/scilab/modules/io/src/c/io.vcproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
@@ -390,10 +390,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\sci_gateway\c\sci_diary.c"
-				>
-			</File>
-			<File
 				RelativePath="..\..\sci_gateway\c\sci_file.c"
 				>
 			</File>
@@ -488,10 +484,6 @@
 			</File>
 			<File
 				RelativePath="..\..\includes\gw_io.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\sci_gateway\c\sci_diary.h"
 				>
 			</File>
 			<File
