temp. commented to build on linux (diary disabled)

--- a/scilab/modules/output_stream/Makefile.am
+++ b/scilab/modules/output_stream/Makefile.am
@@ -10,6 +10,14 @@
 ## Copyright INRIA 2007
 ##
 
+OUTPUT_STREAM_CPP_SOURCES = src/cpp/Diary.cpp \
+	src/cpp/DiaryList.cpp \
+	src/cpp/diary_manager.cpp \
+	src/cpp/getDiaryDate.cpp \
+	src/cpp/getFullFilename.cpp
+
+GATEWAY_CPP_SOURCES = sci_gateway/cpp/sci_diary.cpp
+
 OUTPUT_STREAM_C_SOURCES = 	src/c/erro.c \
 				src/c/cerro.c \
 				src/c/Scierror.c \
@@ -62,11 +70,20 @@ libscioutput_stream_la_CFLAGS=  -I$(top_srcdir)/libs/MALLOC/includes/ \
 -I$(top_srcdir)/modules/api_scilab/includes \
 -I$(top_srcdir)/modules/string/includes
 
+libscioutput_stream_la_CPPFLAGS=  -I$(top_srcdir)/libs/MALLOC/includes/ \
+-I$(srcdir)/includes/ \
+-I$(top_srcdir)/modules/core/includes \
+-I$(srcdir)/src/cpp/ \
+-I$(srcdir)/src/c/ \
+-I$(top_srcdir)/modules/api_scilab/includes \
+-I$(top_srcdir)/modules/string/includes
+
+
 pkglib_LTLIBRARIES = libscioutput_stream.la
 
 libscioutput_stream_la_LDFLAGS = -version-info $(SCILAB_LIBRARY_VERSION)
 
-libscioutput_stream_la_SOURCES = $(OUTPUT_STREAM_C_SOURCES) $(OUTPUT_STREAM_FORTRAN_SOURCES) $(GATEWAY_C_SOURCES) $(GATEWAY_FORTRAN_SOURCES) $(JNI_SOURCES)
+libscioutput_stream_la_SOURCES = $(OUTPUT_STREAM_C_SOURCES) $(OUTPUT_STREAM_CPP_SOURCES) $(OUTPUT_STREAM_FORTRAN_SOURCES) $(GATEWAY_C_SOURCES) $(GATEWAY_CPP_SOURCES) $(GATEWAY_FORTRAN_SOURCES) $(JNI_SOURCES)
 
 # For the code check (splint)
 CHECK_SRC= $(OUTPUT_STREAM_C_SOURCES) $(GATEWAY_C_SOURCES)
